<resources>
    <string name="app_name">Modul BI</string>
    <string name="kompetensi_inti">KOMPETENSI \nINTI</string>
    <string name="kompetensi_dasar">KOMPETENSI \nDASAR</string>
    <string name="tujuan_pembelajaran">TUJUAN \nPEMBELAJARAN</string>
    <string name="text">Cerita fantasi adalah sebuah cerita yang tidak mungkin terjadi, Seperti cerita tentang dewa, sapu berjalan, pria perkasa yang sebenarnya tidak ada, namun terdapat keutuhan kisah berdasarkan logika dan realitas yang bisa dipercaya dan diam-diam mengandung pesan moral.</string>
    <string name="ceritasatu">\t\tSARA HUSSEIN, anak yang selalu bahagia dan ceria. Anak yang berumur 10 tahun. Selidik warga di sekitar, Sara harusnya dilahirkan kembar, karena hasil USG 10 tahun yang lalu harusnya Sara punya kembaran. Tapi sayangnya, Sara tidak tahu.  Di sekitar rumah Sara, hujan deras. Bahkan hampir banjir. Karena rumah Sara bocor, ia mengungsi ke rumah kakek-neneknya. Sesampainya di rumah kakeknya,
“Cucuku, tolong ambilkan kopi kakek di dapur.”\n\n
\t\t“Baiklah, Kek,” jawab Sara.\n\n
\t\tKetika sampai di dapur, Sara melihat sebuah gudang usang dan ditutupi jaring laba-laba. Lalu rasa penasaran Sara keluar, “Aku ingin tahu, ada apa di sana.” Dengan mengabaikan perintah kakek, dia pun masuk ke gudang itu. Terdapat jam dinding tergeletak di bawah, sangat besar, royal dan elegan, tapi angkanya kuno.\n\n
\t\t“Besar sekali jam itu,” kagumnya, lalu dia menyentuh jam itu, sekedar terlepas kata dari mulutnya. “Aku ingin tahu, keadaan sebelum aku lahir.”\n\n
\t\tLalu benda-benda di sekitarnya berputar-putar   zzseperti tornado. Dan tiba-tiba saja dia tergeletak di sebuah lemari kecil nan kuno, ketika dia keluar, dia sedikit tidak bisa bernapas, dia baru sadar, hanya dirinya yang hitam-putih dan tidak bisa dilihat atau diraba.\n\n
\t\t“Oh, baiklah, ini masa lalu,” katanya.\n\n
\t\tDia berlari-lari terlalu senang, lalu dia melihat ibunya yang sedang hamil dengan mengatakan, “Baik Nona Teren, aku akan pergi ke rumah sakit untuk USG.” Lalu, Sara mengikutinya pergi. Ketika sampai di rumah sakit, ibunya langsung diperiksa dan kata dokter, bayinya kembar, Sara bingung, “Apa? Kembar?” tapi dia melihat ibunya menanyakan soal bayinya yang satu lagi.\n\n
“Dokter, mengapa salah satu bayiku berwarna putih dan bening?” Seketika dokter ingin menjawab dan begitu saja rasanya waktu terlewat.\n\n
\t\tLangsung ketika ibu Sara melahirkan, Sara sugguh senang, karena dia akan melihat dirinya lahir. Ketika ia lahir, ia sungguh bingung, mengapa hanya dia yang lahir, tidak ada saudara kembarnya. Lalu ketika dokter membawa dirinya yang masih bayi pergi, Sara melihat seorang bidadari keluar dengan menghampirinya dan berkata, “Hai, adikku, aku peri pelindungmu sekaligus kembaranmu.”\n\n
\t\tPelan-pelan dia sadar dan dia mengetahui bahwa saudara kembarnya adalah peri pelindung, setelah mengetahui itu, waktu seakan berlari dan kembali ke masa sekarang. Lalu ia turun dan bahagia sambil keluar dan hujan-hujanan, serta terus berkata, “Yeay! Aku punya seorang peri pelindung!”\n\n\n


</string>
    <string name="https_www_pinimg_com">https://www. pinimg.com</string>
    <string name="pengarang">(http://cerpenmu.com/)</string>
    <string name="ya">Kerjakan soal berikut!</string>
    <string name="https_www_wallpaperbetter_com">https://www.wallpaperbetter.com</string>
    <string name="ceritadua">\t\tPada suatu hari ada seorang anak perempuan yang sedang mencari kayu bakar, namanya Nina. Dia tinggal bersama ibu tirinya, keadaan mereka sangat miskin. Ibu tirinya sangat kejam terhadap anaknya tersebut.\n\n
        \t\tPada suatu hari ibunya tersebut menyuruh Nina untuk mencari kayu bakar yang banyak di hutan untuk dijual. Dia berjalan sangat jauh ke dalam hutan. Ketika selesai mencari kayu, Nina baru sadar bahwa ia tersesat di dalam hutan. Lalu Nina mencari jalan keluarnya, namun malah semakin tersesat. \n\n
        \t\tPada saat itu ia sangat kehausan sedangkan air minumnya tinggal sedikit dan tiba-tiba ada seorang kakek yang datang dan berkata, “Cu, kakek sudah jauh sekali berjalan cu, sekarang kakek sangat haus, boleh kakek meminta air minummu?” Nina pun memberikan air minumnya tersebut dan kakek tersebut memberikan sebuah korek api. Kakek tersebut berpesan kepada Nina bahwa korek api tersebut adalah korek api ajaib.\n\n
        \t\t“Apa yang kamu inginkan niscaya akan terwujud, tetapi hanya boleh tiga kali pakai saja, apabila lebih dari tiga kali akan ada bencana yang menimpa.” Nina pun mengangguk-anggukan kepalanya dan mengucapkan terima kasih kepada kakek tersebut dan tiba-tiba kakek tersebut menghilang begitu saja, Nina pun sangat terkejut. \n\n
        \t\tSetelah itu, Nina pun menyalakan korek api yang pertamanya dia ingin pulang ke rumahnya, dengan sekejap dia telah sampai di depan rumahnya. Setelah itu dia menyalakan korek api yang kedua dia ingin ibunya baik kepadanya. Setelah itu, ia mengetuk pintu rumahnya, dan tiba-tiba ibunya datang untuk memeluk Nina dan meminta maaf kepadanya karena telah menyuruhnya mencari kayu bakar di hutan. Setelah itu, dia menyalakan korek api yang ketiga dia ingin keluarganya mejadi orang kaya. Setelah itu, Nina dan ibunya pun hidup bahagia.\n\n\n</string>
    <string name="soal1">1.\tDalam cerita “Misteri Saudara Kembar Sara” dan “Nina dan Korek Api Ajaib”, sebutkan tokoh beserta wataknya?</string>
    <string name="catatan_tulis_jawaban_pada_lembar_kerja_siswa">Catatan : tulis jawaban pada lembar kerja siswa!</string>
    <string name="textt">1.\tCerita fantasi memiliki struktur sebagai orientasi, komplikasi, dan resolusi.\n\n
        \t\ta.\tOrientasi merupakan penggambaran cerita sebagai perkenalan tempat, tokoh, waktu, peristiwa yang terjadi dan biasanya bagian ini terletak diawal cerita.\n\n
        \t\tb.\tKomplikasi merupakan penggambaran cerita sebagai tubuh utama menghadapi sebuah rintangan dalam mencapai tujuan atau cita cita. Pada bagian ini mulai bermunculan konflik atau masalah dan bagian ini biasanya terletak di tengah cerita.\n\n
        \t\tc.\tResolusi merupakan penggambaran penyelesaian dari masalah yang dihadapi oleh tokoh utama dan biasanya terletak diakhir cerita.\n\n
        2.\tCerita fantasi memiliki ciri kebahasaan kebahasaan sebagi berikut:\n\n
        \t\ta.\tPenggunaan kata ganti dan nama orang sebagai sudut pandang penceritaan (aku, mereka, dia, Erza, Doni)\n\n
        \t\tb.\tPenggunaan kata yang mencerap pancaindra untuk deskripsi latar (tempat, waktu, suasana)\n\n
        \t\tc\t Menggunakan pilihan kata dengan makna kias dan makna khusus.\n\n
        \t\td.\tKata sambung penanda urutan waktu Kata sambung urutan waktu setelah itu, kemudian, sementara itu, bersamaan dengan itu, tiba-tiba, ketika, sebelum, dan sebag inya.\n\n
        \t\te.\tPenggunaan kata/ungkapan keterkejutan Penggunaan kata/ungkapan keterkejutan berfungsi untuk menggerakkan cerita (memulai masalah).\n\n
        \t\tf.\tPenggunaan dialog/ kalimat langsung dalam cerita “Raksasa itu mengejar kita!” teriak Fona kalang kabut. \n</string>
    <string name="satu">1. Perhatikan kutipan teks cerita berikut!\nTiga anak bersaudara yakni Tana, Tini dan Tono memiliki sifat yang sangat berbeda satu sama lainnya. Tana memiliki sifat yang penakut, Tini memiliki sifat yang ceroboh dan Tono memiliki sifat yang pemberani sekali.\nBuatlah hal serupa tentang isi deskripsi pada kutipan teks di atas, dengan isi cerita “Misteri Saudara Kembar Sara” dan “Nina dan Korek Api Ajaib”!\n</string>
    <string name="dua">2. Dalam sebuah cerita terdapat rangkaian peristiwa (alur) yang direka dan dijalin sedemikian rupa, sehingga menggerakkan jalan cerita dari awal hingga akhir. Bagaimana dengan rangkaian peristiwa (alur) pada cerita “Misteri Saudara Kembar Sara” dan “Nina dan Korek Api Ajaib”, jelaskan disertai dengan alasan yang tepat!\n</string>
    <string name="tiga">3. Pengembangan sebuah cerita berangkat dari ide dasar, karena ide dasar merupakan pokok pembicaraan yang di bahas secara dasar dalam sebuah cerita oleh pengarang. Oleh karena itu, jika ceritanya menarik berarti ide dasarnya menarik. Lalu apakah ide dasar dari cerita “Misteri Saudara Kembar Sara” dan “Nina dan Korek Api Ajaib”, dan apakah ceritanya menarik menurutmu?\n</string>
    <string name="empat">4. Perhatikan kutipan cerita berikut!\n\nTeks 1\n\nLalu ia turun dan bahagia sambil keluar dan hujan-hujanan, serta terus berkata, “Yeay! Aku punya seorang peri pelindung!”\n\nTeks 2\n\nKetika selesai mencari kayu, Nina baru sadar bahwa ia tersesat di dalam hutan. Lalu Nina mencari jalan keluarnya, namun malah semakin tersesat.\n\nPersamaan penggambaran latar apa yang terdapat pada kutipan di atas dan adakah penggambaran latar yang lain dalam kedua cerita tersebut? jika ada sebutkan beserta bukti!\n</string>
    <string name="lima">5. Seorang penulis menggambarkan peristiwa dalam bentuk cerita dari berbagai sudut pandang. Sedangkan, bagaimana menurutmu tentang sudut pandang penulisan dalam cerita “Misteri Saudara Kembar Sara” dan “Nina dan Korek Api Ajaib”? \n
        jelaskan berdasarkan kolom berikut!</string>
    <string name="enam">6. Selain menghibur, sebuah cerita fantasi ditulis dengan tujuan menyampaikan sebuah pesan terkait nilai-nilai kehidupan baik tersirat maupun tersurat. Sehingga, sebagai pembaca harus bisa menangkap pesan tersebut. Oleh karena itu, dari cerita “Misteri Saudara Kembar Sara” dan “Nina dan Korek Api Ajaib”, pesan apakah yang ada pada cerita tersebut?</string>
</resources>