<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LatihanDua"
    android:background="@drawable/bglatihandua">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginTop="165dp"
            android:layout_gravity="center"
            android:layout_marginBottom="75dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#C3D69B"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    android:layout_marginBottom="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:justificationMode="inter_word"
                            android:text="@string/satu"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:justificationMode="inter_word"
                            android:text="@string/dua"
                            android:layout_marginBottom="4dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:justificationMode="inter_word"
                            android:text="@string/tiga"
                            android:layout_marginBottom="4dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:justificationMode="inter_word"
                            android:text="@string/empat"
                            android:layout_marginBottom="4dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:justificationMode="inter_word"
                            android:text="@string/lima"
                            android:layout_marginBottom="4dp"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lima"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:justificationMode="inter_word"
                            android:text="@string/enam"
                            android:layout_marginBottom="4dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/catatan_tulis_jawaban_pada_lembar_kerja_siswa"
                    android:textSize="12sp"
                    android:layout_marginStart="42dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/white"
                    android:textStyle="italic|bold">

                </TextView>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="41dp"
                    android:src="@drawable/textttt"/>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#FFFFFF"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="#C3D69B"
                            android:hint="Nama"
                            app:helperText="(Masukkan nama lengkap)"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextNama"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:backgroundTint="#C3D69B"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutAbsen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Absen"
                            app:helperText="(Masukkan nomor absen xx)"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextAbsen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:backgroundTint="#C3D69B"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutJawab"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Jawaban"
                            app:helperText="(Tulis Jawaban)"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextJawab"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress|textMultiLine"
                                android:minLines="5"
                                android:backgroundTint="#C3D69B"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <Button
                            android:id="@+id/buttonGo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="8dp"
                            android:layout_gravity="right"
                            android:backgroundTint="#9BBB59"
                            android:text="Kirim">

                        </Button>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="120dp"
            android:src="@drawable/ic_home"></ImageView>

        <ImageView
            android:id="@+id/ivMateri"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_back"></ImageView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>