<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.KompetensiActivity"
    android:background="@drawable/kompetensi">

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="2dp"
            app:cardElevation="6dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFC000">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="#E1C718"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivK2"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_k1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#E1C718"
                    android:gravity="left"
                    android:maxLines="2"
                    android:text="@string/kompetensi_inti"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="2dp"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFC000">

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="#E1C718"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_k2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#E1C718"
                    android:gravity="left"
                    android:maxLines="2"
                    android:text="@string/kompetensi_dasar"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="2dp"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFC000">

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="#E1C718"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:src="@drawable/v5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#E1C718"
                    android:gravity="left"
                    android:maxLines="2"
                    android:text="Indikator"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="2dp"
            app:cardElevation="6dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFC000">

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="#E1C718"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_k3" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#E1C718"
                    android:gravity="left"
                    android:maxLines="2"
                    android:text="@string/tujuan_pembelajaran"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="664dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_home" />

        </LinearLayout>



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>